{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 124,
  "lineage": "3d04ea02-a4fd-41ab-c9e5-16f54c1ccafb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-089ec0f658acf83e1",
            "domain": "vpc",
            "id": "eipalloc-03b21f7a33573f91a",
            "network_interface": "eni-034544ab052292733",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-3-93-230-225.compute-1.amazonaws.com",
            "public_ip": "3.93.230.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "gorillaELB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:614364516128:loadbalancer/gorilla-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "gorilla-elb-811585759.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "tcp:3000",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "gorilla-elb",
            "idle_timeout": 400,
            "instances": [
              "i-00d6c1aeb6804fa17",
              "i-0c85474431a1c5e8d"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "gorilla-elb",
            "security_groups": [
              "sg-08c88a9da4c06bb11"
            ],
            "source_security_group": "614364516128/nginx_elb_sg",
            "source_security_group_id": "sg-08c88a9da4c06bb11",
            "subnets": [
              "subnet-083e870a1d23502da",
              "subnet-0cdf206465f250fe8"
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.elb-sg",
            "aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6b1d09930fac512",
            "arn": "arn:aws:ec2:us-east-1:614364516128:instance/i-0618a48bfcc035bed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "EC2",
            "id": "i-0618a48bfcc035bed",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "etax",
            "monitoring": false,
            "primary_network_interface_id": "eni-03bdd5ceaaabdf32c",
            "private_dns": "ip-10-0-1-151.ec2.internal",
            "private_ip": "10.0.1.151",
            "public_ip": "100.24.120.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-04d8b63753c268c16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0cdf206465f250fe8",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f86f81b8ec8b5570"
            ]
          },
          "depends_on": [
            "aws_security_group.nginx-sg",
            "aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0616639fb661a80e6",
            "owner_id": "614364516128",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b21f7a33573f91a",
            "id": "nat-04e5e90cb1885196d",
            "network_interface_id": "eni-034544ab052292733",
            "private_ip": "10.0.1.6",
            "public_ip": "3.93.230.225",
            "subnet_id": "subnet-0cdf206465f250fe8",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "NAT-GW"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prvrtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0442028a7e98e7481",
            "owner_id": "614364516128",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-04e5e90cb1885196d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-Prvrtb"
            },
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_nat_gateway.NATgw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pubrtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-079137f5841f837a6",
            "owner_id": "614364516128",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0616639fb661a80e6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-Pubrtb"
            },
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Privrta-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097ffc03dfd401f73",
            "route_table_id": "rtb-0442028a7e98e7481",
            "subnet_id": "subnet-024a271dbe26d3ca9"
          },
          "depends_on": [
            "aws_route_table.Prvrtb",
            "aws_subnet.PrivateSubnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09090a62e5ad59766",
            "route_table_id": "rtb-0442028a7e98e7481",
            "subnet_id": "subnet-06ab3eac20144d8cd"
          },
          "depends_on": [
            "aws_route_table.Prvrtb",
            "aws_subnet.PrivateSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pubrta-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a31ccfc55c33b11d",
            "route_table_id": "rtb-079137f5841f837a6",
            "subnet_id": "subnet-0cdf206465f250fe8"
          },
          "depends_on": [
            "aws_route_table.Pubrtb",
            "aws_subnet.PublicSubnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b50525854e6360e1",
            "route_table_id": "rtb-079137f5841f837a6",
            "subnet_id": "subnet-083e870a1d23502da"
          },
          "depends_on": [
            "aws_route_table.Pubrtb",
            "aws_subnet.PublicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614364516128:security-group/sg-08c88a9da4c06bb11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c88a9da4c06bb11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": null,
            "owner_id": "614364516128",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614364516128:security-group/sg-0f86f81b8ec8b5570",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f86f81b8ec8b5570",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": null,
            "owner_id": "614364516128",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614364516128:subnet/subnet-024a271dbe26d3ca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-024a271dbe26d3ca9",
            "map_public_ip_on_launch": false,
            "owner_id": "614364516128",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "Private-subnet-1"
            },
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614364516128:subnet/subnet-06ab3eac20144d8cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06ab3eac20144d8cd",
            "map_public_ip_on_launch": false,
            "owner_id": "614364516128",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "Private-subnet-2"
            },
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614364516128:subnet/subnet-0cdf206465f250fe8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cdf206465f250fe8",
            "map_public_ip_on_launch": true,
            "owner_id": "614364516128",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "Public-subnet-1"
            },
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614364516128:subnet/subnet-083e870a1d23502da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-083e870a1d23502da",
            "map_public_ip_on_launch": true,
            "owner_id": "614364516128",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "Public-subnet-2"
            },
            "vpc_id": "vpc-0e491c0b412e97012"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614364516128:vpc/vpc-0e491c0b412e97012",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ca435e50ef25876",
            "default_route_table_id": "rtb-0dd87bee668575421",
            "default_security_group_id": "sg-05ceb7da0be73318d",
            "dhcp_options_id": "dopt-4189b13a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e491c0b412e97012",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dd87bee668575421",
            "owner_id": "614364516128",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}